# dataset-quality-analyzer

./: .dockerignore  .gitignore  BENCHMARKS.md  FINDING_CATALOG.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  V1_SPEC.md  dqa.yaml  dqa_seg.yaml  dqa_seg_low_noise.yaml  pyproject.toml  web_dashboard.py  wiki.md
.github/workflows/: deploy-aws.yml  dqa-ci.yml
docker/: worker.Dockerfile  worker_bootstrap.py
docs/: ADR-001-aws-alpha.md  CONTAINERS.md  DEPLOYMENT.md  LAUNCH-CHECKLIST.md  OPERATIONS.md
dqa/: __init__.py  audit.py  cli.py  config.py  indexer.py  ingest.py  io_yolo.py  remote.py  worker_entry.py
dqa/aws/: __init__.py  adapters.py  api_handler.py  cost_guard.py  monitoring.py  observability.py  worker.py
dqa/checks/: __init__.py  bbox_sanity.py  duplicates.py  (+4 more)
schemas/: flags.schema.json  summary.schema.json
scripts/: bootstrap_aws.ps1  build_lambda.py  build_web.py  container_smoke.py  deploy_aws.sh  diagnose_aws_job.ps1  simulate_worker_failure.ps1
tests/: test_audit_service.py  test_aws_adapters.py  test_aws_monitoring.py  test_aws_worker.py  test_checks.py  test_cli_contract.py  test_coco_seg.py  test_config.py  test_dashboard.py  test_diff.py  test_explain.py  test_formats_e2e.py  test_indexer_workers.py  test_ingest.py  test_integrity.py  test_job_lifecycle.py  test_lambda_package.py  test_near_duplicates.py  test_remote.py  test_retention.py  test_roboflow_provider.py  test_upload_api.py  test_uploads.py  test_validate.py  test_web_api.py  test_web_frontend.py  test_web_security.py  test_worker_entry.py  test_yolo_seg.py
web/: README.md  app.js  config.js  index.html  styles.css
(+32 files in other folders)
