[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-quality-analyzer"
dynamic = ["version"]
description = "Read-only quality auditing for YOLO and COCO vision datasets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Atikul Munna" },
]
keywords = ["computer-vision", "dataset", "data-quality", "coco", "yolo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "jsonschema>=4.18,<5",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
near-duplicates = ["Pillow>=10,<13"]
dev = [
  "build>=1.2,<2",
  "Pillow>=10,<13",
  "pytest>=8,<10",
]

[project.scripts]
dqa = "dqa.cli:main"

[project.urls]
Homepage = "https://github.com/atikulmunna/dataset-quality-analyzer"
Issues = "https://github.com/atikulmunna/dataset-quality-analyzer/issues"
Repository = "https://github.com/atikulmunna/dataset-quality-analyzer.git"

[tool.setuptools.dynamic]
version = { attr = "dqa.__version__" }

[tool.setuptools.packages.find]
include = ["dqa*"]

[tool.setuptools.package-data]
dqa = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
